# finance-analysis-ai-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  document.md  pyproject.toml  upgrade_plan.md
.github/workflows/: ci.yml
app/: main.py
app/api/routes/: analyze.py  extractions.py  health.py  inputs.py  normalizations.py  preprocessing.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: ai_analysis_record.py  extraction_record.py  input_record.py  normalization_record.py  preprocessing_record.py
app/schemas/: analyze.py  classification.py  extraction.py  input_response.py  normalization.py  preprocessing.py
app/services/: classification_service.py  health_service.py  image_classifier.py  mime_detector.py  pdf_classifier.py  routing_service.py  upload_service.py
app/services/ai/: analysis_service.py  anomaly_detection.py  categorization.py  category_taxonomy.py  embedding_classifier.py  feature_engineering.py  forecast_installment.py  llm_report.py  profiling.py
app/services/extraction/: image_extraction_service.py  ocr_text_extractor.py  ocr_transaction_parser.py  ocr_variant_selector.py  pdf_extraction_service.py  pdf_normalizers.py  pdf_patterns.py  pdf_text_extractor.py  pdf_transaction_parser.py
app/services/input/: classification_service.py  image_classifier.py  mime_detector.py  pdf_classifier.py  (+2 more)
app/workers/: celery_app.py  stage2_dispatcher.py  tasks.py
tests/: conftest.py  test_analyze_contract.py  test_health.py  test_input_classification.py  test_mime_detector.py
(+17 files in other folders)
