[project]
name = "finance-ai-input-pipeline"
version = "0.1.0"
description = "Finance AI input ingestion and classification pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",

    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",

    "redis>=5.2.0",
    "celery>=5.4.0",

    "python-magic>=0.4.27",
    "pymupdf>=1.25.0",
    "pillow>=11.0.0",
    "opencv-python-headless>=4.10.0.84",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=2.1.0",

    "pdfplumber>=0.11.5",
    "pycountry>=24.6.1",

    "pytesseract>=0.3.13",

    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"